# Rust-pathtracer

./: AGENTS.md  Cargo.toml  GUIDING_NOTES.md  README.md  build.rs  materials.json  pt_bayer_pq.avif  pt_pq.avif
optix/: CMakeLists.txt  cuda_fixups.cuh  cuda_kernels.cu  guiding_gpu.cuh  guiding_gpu.h  kernels.cu  openpgl_bridge.cpp  openpgl_bridge.h  optix_device.cu  optix_wrapper.cpp
src/: guiding.rs  main.rs
