[package]
name = "rustpathtracer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
image = "0.25.6"
anyhow = "1.0.99"
png = "0.17"
ravif = "0.12"
rgb = "0.8"
rav1e = { version = "0.8", default-features = false }
avif-parse = "1.3"
avif-serialize = "0.8"

[build-dependencies]
cmake = "0.1.54"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1

[features]
default = []
optix = []
